# illumos-installer

./: .gitmodules  Cargo.toml  Makefile.toml
.config/: config
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
libcfgparser/: Cargo.toml
libcfgparser/src/: config.pest  lib.rs
libimgapi/: Cargo.toml
libimgapi/src/: lib.rs  manifest.rs
libinstall/: Cargo.toml
libinstall/src/: config.rs  ensure.rs  keywords.rs  lib.rs  zfs.rs
libinstall/src/config/: mod.rs
libshadow/: Cargo.toml
libshadow/src/: lib.rs  shadow.pest
libsysconfig/: Cargo.toml
libsysconfig/src/: command.rs  devprop.rs  illumos_driver.rs  keywords.rs  lib.rs  mock_driver.rs  svcprop.rs
passutil/: Cargo.toml  Makefile.toml
passutil/samples/: shadow.txt
passutil/src/: main.rs
pkg/: sysconfig.mog
samples/: mocking.json  mocking.sycfg  simple_config.sycfg
sysconfig/: Cargo.toml  Makefile.toml  sysconfig.xml
sysconfig/src/: main.rs
sysconfigen/: Cargo.toml  Makefile.toml
sysconfigen/src/: main.rs
