[package]
name = "libimgapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features = ["derive"] }
log = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "1.8", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }