[package]
name = "libinstall"
version = "0.1.0"
edition = "2021"
description = "Library with all the Plumbing needed so your application can install a illumos system"
license = "MPL-2.0"
homepage = "https://github.com/Toasterson/illumos-installer"
repository = "https://github.com/Toasterson/illumos-installer"
documentation = "https://github.com/Toasterson/illumos-installer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
thiserror = "1.0.30"
libcfgparser = {path= "../libcfgparser"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
ron = "0.7"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
digest = "0.9"
md-5 = "0.9"
sha-1 = "0.9"
log = "0.4"
libc = "0.2"
illumos = {path = "../illumos"}
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3.14"