[package]
name = "libshadow"
version = "0.1.0"
edition = "2021"
description = "Library with all the plumbing needed to list and change /etc/shadow"
license = "MPL-2.0"
homepage = "https://github.com/Toasterson/illumos-installer"
repository = "https://github.com/Toasterson/illumos-installer"
documentation = "https://github.com/Toasterson/illumos-installer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
anyhow = "1.0.56"
thiserror = "1.0.30"
pwhash = "1.0.0"