[package]
name = "passutil"
version = "0.1.0"
edition = "2021"
description = "Utility to build shadow compatible password hashes and update /etc/shadow"
license = "MPL-2.0"
homepage = "https://github.com/Toasterson/illumos-installer"
repository = "https://github.com/Toasterson/illumos-installer"
documentation = "https://github.com/Toasterson/illumos-installer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libshadow = { path = "../libshadow" }
clap = { version = "3.1.9", features = ["derive"] }
anyhow = "1.0.56"