[package]
name = "sysconfig"
version = "0.1.0"
edition = "2021"
description = "System configuration service"
license = "MPL-2.0"
homepage = "https://github.com/Toasterson/illumos-installer"
repository = "https://github.com/Toasterson/illumos-installer"
documentation = "https://github.com/Toasterson/illumos-installer"
include = ["src/main.rs", "sysconfig.xml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "3.1", features = ["derive", "regex", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
ron = "0.7"
log = "0.4"
slog = "2.7"
slog-stdlog = "4.1"
slog-scope = "4.4"
slog-async = "2.7"
slog-term = "2.9"
slog-syslog = { version = "0.13"}

libsysconfig = {path = "../libsysconfig"}
libcfgparser = {path = "../libcfgparser"}
