[package]
name = "sysconfigen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "3.1", features = ["derive", "regex", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
ron = "0.7"
shrust = "0.0"

libsysconfig = {path = "../libsysconfig"}
libcfgparser = {path = "../libcfgparser"}
